# ZUPT

./: CMakeLists.txt  README.md
data/: imu_data.csv
data/baseline/: are_scores.csv  glrt_scores.csv  mag_scores.csv  mv_scores.csv
docs/: zupt-detector.md
include/: zupt.h
src/: main.cpp  zupt.cpp
tests/: test_zupt.cpp
tools/: dump_baseline.cpp
